src/scss/main.scss
@import "~normalize.css";
@import "~codemirror/lib/codemirror.css";
@import "~@fortawesome/fontawesome-pro/css/fontawesome.css";
@import "~@fortawesome/fontawesome-pro/css/light.css";
@import "./toast.scss";

body {
    font-family:Arial, Helvetica, sans-serif;
}
.hide {
    display:none;
}

/********************************************
*
* Header
*
* *******************************************/
header {
    height:60px;
    line-height: 60px;
    box-shadow: inset 0 -1px 0 0 rgba(100,121,143,0.122);
}
.row {
    display: flex;
    justify-content: space-between;
}
.col {
    flex: 50%;
}
.brand {
    margin-left:20px;
}
.fa-container {
    background:#fff;
    border:0;
    cursor: pointer;
    color:rgb(68, 68, 68);
    font-size:20px;
}
#savebutton:disabled {
    color:#999;
}
.fa-container:focus {
    outline:none;
}
#savebutton:focus, #newbin:focus {
    outline:none;
}
#savestatus {
    color:#fff;
    transition:color .8s;
}
#savestatus.active {
    color:#424242;
}
#amp_status {
    float:right;
    padding:0 20px;
    font-size:20px;
}
#userphoto {
    float:right;
}
#userphoto img {
    width:60px;
    height:60px;
    line-height: 60px;
}
.pass {
    background:green;
    color:#fff;
}
.fail {
    background:red;
    color:#fff;
}

/********************************************
*
* Editor/Preview
*
* *******************************************/
.CodeMirror, #editor, #preview {
    width:50%;
    float:left;
    height:calc(100vh - 50px);
    border-right:1px solid #64798f1f;
}
.CodeMirror, #preview {
    box-sizing: border-box;
}
#preview {
    border:none;
}

